@@ -1,3 +1,7 @@
+2003-04-04  Jordi Mallach  <jordi@sindominio.net>
+
+	* Makefile.am: fix the install path for desktop files.
+
 2003-03-25  Dani Carbonell  <bocata@panete.net>
 
 	* src/partyline.c (entrykey): fixed a bug when hitting the up or
